Try to fix formatting on mobile

--- a/Eorzea.Rcl/Components/EorzeaClock.razor.css
+++ b/Eorzea.Rcl/Components/EorzeaClock.razor.css
@@ -12,3 +12,20 @@
     margin: 5px;
     padding: 5px;
 }
+
+@media /*only screen and*/ (max-width: 600px) {
+
+    h2 {
+        font-size: 8vw;
+    }
+
+    h3 {
+        font-size: 8vw;
+    }
+
+    label {
+    }
+
+    input[type='checkbox'] {
+    }
+}
